2021-12-04  Larus  <larus@Jim-Macbook-Air>

	* Release: 9.1.23

	* QtSpim/macinfo.plist
	[https://sourceforge.net/p/spimsimulator/bugs/87/]:
	Fix version number for MacOS Finder.

	* README, README.rtf
	Note that QtSpim does not compile with QT version 6.

	* QtSpim_Mac.pkgproj, release-osx:
	Fix paths for Qt5.
	
2021-10-19  Larus  <larus@Jim-Macbook-Air>

	* data.cpp, inst.cpp, run.h:
	Eliminate compiler warnings.
	
2021-10-11  Larus  <larus@Jim-Macbook-Air>

	* data.cpp, inst.cpp, parser.y [https://sourceforge.net/p/spimsimulator/bugs/100/]:
	Fix .align directive

2021-09-20  Larus  <larus@Jim-Macbook-Air>

	* Update test case.

2020-12-19  Larus  <larus@Jim-Macbook-Air>

	* CPU/parser.y Tests/tt.bare.s [https://sourceforge.net/p/spimsimulator/bugs/99/]:
	Missing nops in code generated for pseduo instructions when
	running with delayed branches.

2020-12-05  Larus  <larus@Jim-Macbook-Air>

        * CPU/run.cpp, spim-utils.cpp, reg.h, display-utils.cpp Tests/tt.core.s [https://sourceforge.net/p/spimsimulator/bugs/98/]:
        Fix floating point condition code, which only really worked for CC = 0, default.

2020-07-13  Larus  <larus@Jim-Macbook-Air>

	* CPU/inst.cpp [https://sourceforge.net/p/spimsimulator/bugs/97/]:
	Incorrect call to write_ouput allows string injection.

2020-06-02  Larus  <larus@Jim-Macbook-Air>

	* CPU/inst.{cpp,h}, spim/Makefile [https://sourceforge.net/p/spimsimulator/bugs/96/]:
	Fix problem with incorrect decoding of binary values for FP instructions.

2020-05-09  larus  <larus@ubuntu>

	* Release 9.1.22 (Linux only):

	* QtSpim/QtSpim.pro:
	Use libGL from Qt installation rather than require full installation of OpenCL.

	* bin/release-debin:
	Fix Linux by explicity adding libraries files that aren't dll'ed.

2020-01-17  Larus  <larus@Jim-Macbook-Air>

	* Release 9.1.21
	
	* CPU/version.h:

2020-01-15  Larus  <larus@Jim-Macbook-Air>

	* CPU/parser.y:
	Fixed type error (g++-9).

2020-01-14  Larus  <larus@Jim-Macbook-Air>
